--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 # Setup.py Configuration #
 ##########################
 [metadata]
-name = OntoRAG
+name = ontorag
 version = 0.0.1
 description = Ontology-based RAG for Scientific Discovery
 long_description = file: README.md
@@ -64,6 +64,11 @@ install_requires =
     click
     more_click
     # TODO your requirements go here
+    dspy-ai
+    owlready2
+    spacy
+    python-dotenv
+
 
 # Random options
 zip_safe = false
