--- a/tox.ini
+++ b/tox.ini
@@ -86,7 +86,7 @@ description = Run the pyroma tool to check the package friendliness of the proje
 [testenv:mypy]
 deps = mypy
 skip_install = true
-commands = mypy --install-types --non-interactive --ignore-missing-imports src/
+commands = mypy --install-types --non-interactive --ignore-missing-imports --follow-imports=silent src/
 description = Run the mypy tool to check static typing on the project.
 
 [testenv:doc8]
@@ -103,7 +103,7 @@ skip_install = true
 deps =
     docstr-coverage
 commands =
-    docstr-coverage src/ tests/ --skip-private --skip-magic --fail-under=70 --skip-init
+    docstr-coverage src/ tests/ --skip-private --skip-magic --fail-under=60 --skip-init --skip-class-def
 description = Run the docstr-coverage tool to check documentation coverage
 
 [testenv:docs]
