--- a/setup.cfg
+++ b/setup.cfg
@@ -64,10 +64,11 @@ install_requires =
     click
     more_click
     # TODO your requirements go here
-    dspy-ai
+    dspy-ai>=2.5.0
     owlready2
     spacy
     python-dotenv
+    numpy==1.26.4
 
 
 # Random options
